manage vacancy page changes

--- a/app/views/v14/_summary.html
+++ b/app/views/v14/_summary.html
@@ -160,6 +160,13 @@
                   <li>UPDATED the wages page to be refelctive of new minimum wage rate</li>
                 </td>
               </tr>
+
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/provider/view/3c-manage-applications">Manage vacancies page</a></td>
+                <td class='govuk-table__cell'>
+                  <li>CHANGED the page to clean up its structure</li>
+                </td>
+              </tr>
             </tbody>
           </table> 
         </div>
