--- a/app/views/v14/provider/create/start-page.html
+++ b/app/views/v14/provider/create/start-page.html
@@ -29,7 +29,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
       </ul>
 
       <div class="govuk-inset-text">
-        You can use our recruitment <a href="https://www.gov.uk/guidance/get-started-with-the-recruitment-apis-as-a-training-provider" target="_blank">Application Programming Interfaces (APIs) (opens in a new tab)</a> to create vacancies using your existing systems or display vacancies from Find an apprenticeship on your websites.
+        If the employer doesn’t pay the apprenticeship levy, you’ll need to <a href="#" target="_blank">reserve apprenticeship funding</a> before creating a vacancy.
       </div>
 
 
