--- a/app/views/v14/provider/view/1b-manage-vacancy.html
+++ b/app/views/v14/provider/view/1b-manage-vacancy.html
@@ -20,6 +20,9 @@ Manage vacancy
   
     <p class="govuk-body-l">Vacancy reference: VAC1000000997</p>
 
+    <p>
+      This vacancy needs to be approved by the employer. If the employer approves the vacancy, it will be sent to the DfE for review.
+    </p>
 
 <!-- ////START vacancy summry//// -->
 <h2 class="govuk-heading-m">Vacancy summary</h2>
@@ -70,25 +73,11 @@ Manage vacancy
     
 <!-- END vacancy summary  -->
 
-    <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
 
-  </div>
-</div>
-
-<!-- manage applications -->
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-
-  <h2 class="govuk-heading-m">Applications</h2>
 
 
-  <p>
-    Candidate applications for this apprenticeship will appear here.
-  </p>
 
-</div>
-</div>
 
 
 {% endblock %}
