--- a/app/views/v14/provider/view/2b-manage-vacancy.html
+++ b/app/views/v14/provider/view/2b-manage-vacancy.html
@@ -20,6 +20,8 @@ Manage vacancy
   
     <p class="govuk-body-l">Vacancy reference: VAC1000000997</p>
 
+    <p>This vacancy has been sent to us for review. We will tell you within 24 hours if you need to make any edits to this vacancy. </p>
+
 
 <!-- ////START vacancy summry//// -->
 <h2 class="govuk-heading-m">Vacancy summary</h2>
@@ -66,13 +68,13 @@ Manage vacancy
         <p class="govuk-body">
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Delete vacancy</a> &nbsp;
         </p>
     
 <!-- END vacancy summary  -->
 
 <br>
-
-    <p>This application is currently being reviewed by DfE . This will take 48 hours. </p>
+<br>
 
 
 </div>
