--- a/app/views/v14/provider/view/3c-manage-applications.html
+++ b/app/views/v14/provider/view/3c-manage-applications.html
@@ -37,7 +37,7 @@ Manage vacancy
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="#">
-        Close  <span class="govuk-visually-hidden"> vacancy</span>
+        Close vacancy</span>
       </a>
     </dd>
   </div>
@@ -58,7 +58,7 @@ Manage vacancy
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="3c-dates">
-        Change<span class="govuk-visually-hidden"> vacancy dates</span>
+        Change dates</span>
       </a>
     </dd>
   </div>
@@ -136,7 +136,7 @@ Manage vacancy
 
 <!-- START disability confident -->
 <div class="govuk-inset-text">
-  Gloucestershire Health and Care NHS Foundation Trust is a disability confident employer.
+  Gloucestershire Health and Care NHS Foundation Trust is signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" class="govuk-link" rel="noreferrer noopener" target="_blank">Disability Confident scheme (opens in new tab)</a>.
 </div>
 <!-- END disability confident -->
 
