--- a/app/views/v14/employer/create/start-page.html
+++ b/app/views/v14/employer/create/start-page.html
@@ -28,7 +28,7 @@ Create an advert - Your apprenticeship adverts - {{serviceName}} - GOV.UK
       </ul>
 
       <div class="govuk-inset-text">
-        You can use our recruitment <a href="https://www.gov.uk/guidance/get-started-with-the-recruitment-apis-as-an-employer">Application Programming Interfaces (APIs) (opens in a new tab)</a> to create adverts using your existing systems or display adverts from Find an apprenticeship on your websites.
+        If you don’t pay the apprenticeship levy, you’ll need to  <a href="#">reserve apprenticeship funding</a> before creating an advert.
       </div>
 
 
