--- a/app/views/v14/employer/view/1b-manage-advert.html
+++ b/app/views/v14/employer/view/1b-manage-advert.html
@@ -12,92 +12,79 @@ Manage advert
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Manage advert</h1>
+    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
+
+  
+    <p class="govuk-body-l">Advert reference: VAC1000000997</p>
 
 
+<!-- ////START vacancy summry//// -->
+<h2 class="govuk-heading-m">Advert summary</h2>
 
-<!-- ////START SUMMARY//// -->
 <dl class="govuk-summary-list">
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Status
     </dt>
     <dd class="govuk-summary-list__value">
-      Pending DfE review
+      <strong class="govuk-tag govuk-tag--orange">
+        Pending DfE review
+      </strong>
     </dd>
+    <!-- <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="#">
+        Close  <span class="govuk-visually-hidden"> vacancy</span>
+      </a>
+    </dd> -->
   </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Advert title
-    </dt>
-    <dd class="govuk-summary-list__value">
-      Electronic Engineering Technician Apprentice
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Advert reference
-    </dt>
-    <dd class="govuk-summary-list__value">
-      VAC1000000997
-    </dd>
-  </div>
+
+
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Closing date
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Jan 2022</p>
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
+      <br>
+      <br>
       Possible start date
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Aug 2022</p>
+      31 Jan 2023
+      <br>
+      <br>
+      01 Feb 2023
     </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Disability confident
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">Yes</p>
-    </dd>
+    <!-- <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="3c-dates">
+        Change<span class="govuk-visually-hidden"> vacancy dates</span>
+      </a>
+    </dd> -->
   </div>
 </dl>
-<!-- ////END SUMMARY//// -->
-    
-
-    <div class="grid-row">
-      <div class="column-full">
-
-        <div class="govuk-grid-row">
-          <div class="govuk-grid-column-full">
-            <div class="">
-              <a class="govuk-button" data-module="govuk-button" href="view">View advert</a>
-            </div>
-          </div>
-        </div>
 
         <p class="govuk-body">
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View advert</a> &nbsp;
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone advert</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Close advert</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Delete advert</a> &nbsp;
         </p>
-      </div>
-    </div>
-  </div>
+    
+<!-- END vacancy summary  -->
+
+<br>
+
+    <p>This application is currently being reviewed by DfE . This will take 48 hours. </p>
+
+
+</div>
 </div>
 
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h2 class="govuk-heading-l">Manage applications</h2>
+    <h2 class="govuk-heading-m">Manage applications</h2>
 
 <p>
   Candidate applications for this apprenticeship will appear here.
