--- a/app/views/v14/employer/view/3a-live.html
+++ b/app/views/v14/employer/view/3a-live.html
@@ -187,7 +187,7 @@ Adverts
               <td class="govuk-table__cell"> 20 <b>(13 new)</b> </td>
               <td class="govuk-table__cell">01 Jun 2022</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
-              <td class="govuk-table__cell"><a href="3b-manage-advert" class="govuk-link">Manage</a></td>   
+              <td class="govuk-table__cell"><a href="3c-manage-applications" class="govuk-link">Manage</a></td>   
           </tr>
 
           <tr class="govuk-table__row govuk-body-s">
