--- a/app/views/v14/employer/view/4b-manage-advert.html
+++ b/app/views/v14/employer/view/4b-manage-advert.html
@@ -12,185 +12,328 @@ Manage advert
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Manage advert</h1>
+    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
+
+  
+    <p class="govuk-body-l">Advert reference: VAC1000000997</p>
 
 
+<!-- ////START vacancy summry//// -->
+<h2 class="govuk-heading-m">Advert summary</h2>
 
-<!-- ////START SUMMARY//// -->
 <dl class="govuk-summary-list">
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Status
     </dt>
     <dd class="govuk-summary-list__value">
-      Closed
+      <strong class="govuk-tag govuk-tag--grey">
+        Closed
+      </strong>
     </dd>
+    <!-- <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="#">
+        Close  <span class="govuk-visually-hidden"> vacancy</span>
+      </a>
+    </dd> -->
   </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Advert title
-    </dt>
-    <dd class="govuk-summary-list__value">
-      Electronic Engineering Technician Apprentice
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Advert reference
-    </dt>
-    <dd class="govuk-summary-list__value">
-      VAC1000000997
-    </dd>
-  </div>
+
+
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Closing date
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Jan 2022</p>
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
+      <br>
+      <br>
       Possible start date
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Aug 2022</p>
+      31 Jan 2023
+      <br>
+      <br>
+      01 Feb 2023
     </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Disability confident
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">Yes</p>
-    </dd>
+    <!-- <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="3c-dates">
+        Change<span class="govuk-visually-hidden"> vacancy dates</span>
+      </a>
+    </dd> -->
   </div>
 </dl>
-<!-- ////END SUMMARY//// -->
-    
-
-    <div class="grid-row">
-      <div class="column-full">
-
-        <div class="govuk-grid-row">
-          <div class="govuk-grid-column-full">
-            <div class="">
-              <a class="govuk-button" data-module="govuk-button" href="view">View advert</a>
-            </div>
-          </div>
-        </div>
 
         <p class="govuk-body">
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View advert</a> &nbsp;
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone advert</a> &nbsp;
         </p>
+    
+<!-- END vacancy summary  -->
+
+    <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+<!-- START vacancy analytics -->
+
+    <h2 class="govuk-heading-m">Advert analytics</h2>
+
+   <p>
+    To see how many people have looked at your advert, <a href="#">view advert analytics</a>.
+   </p> 
+
+<!-- END vacancy actions -->
+
+    <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+  </div>
+</div>
+
+<!-- manage applications -->
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+
+  <h2 class="govuk-heading-m">Applications (10)</h2>
+
+
+<!-- search box START -->
+    <fieldset class="govuk-fieldset">
+    <legend class="govuk-visually-hidden">Search employer name or account name</legend>
+    <div class="govuk-form-group search-field search-field-darker">
+
+      <div class="search-input search-input-with-button">
+        <label class="govuk-label" for="query">
+          <!--Client reference-->
+          Search applicant name
+        </label>
+
+        <div class="autocomplete__parent_wrapper">
+          <div class="autocomplete__wrapper">
+            <div aria-atomic="true" aria-live="polite" role="status" style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
+              <span>No search results.</span>
+              <span>,,</span>
+            </div>
+            <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
+          </div>
+        </div>
+        <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="">
+      </div>
+      <div class="search-submit">
+        <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search Organisations</button>
       </div>
     </div>
-  </div>
+  </fieldset>
+<!-- search box END -->
+
+<!-- START multiple links -->
+
+  <p class="govuk-body">
+    <a href="8a-multiple-unsuccessful" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
+  </p>
+<!-- END multiple links -->
+
+<!-- START disability confident -->
+<div class="govuk-inset-text">
+  Gloucestershire Health and Care NHS Foundation Trust is a disability confident employer.
 </div>
+<!-- END disability confident -->
 
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-
-<!-- ///ANALYTICS//// -->
-<div class="govuk-grid-row">
-<div class="govuk-grid-column-two-thirds">
-<h2 class="govuk-heading-l">Advert analytics
-  <span class="govuk-caption-l">Showing stats from 20th Jan 2019 to 19th Feb 2019</span>
-</h2>
-<p class="govuk-body">Analytics show the total amount and the change from the previous 7 days</p>
-<div id="analytics" class="govuk-grid-row">
-  <div class="analytics--block govuk-grid-column-one-half">
-    <!-- <h3 class="analytics--header govuk-heading-s">Appeared in search</h3> -->
-    <h3 class="govuk-heading-s">Appeared in search</h3>
-    <div class="analytics--summary">
-      <!-- <div class="analytics--numeric">68 <span class="govuk-visually-hidden">times</span></div> -->
-      <p class="analytics--info">68</p>
-      <p class="analytics--info"><span class="govuk-!-font-weight-bold">+12</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
-    </div>
-    <!-- <div class="analytics--summary">
-      <div class="analytics--numeric">68 <span class="govuk-visually-hidden">times</span></div>
-      <p class="analytics--info"><span class="govuk-!-font-weight-bold">+12</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
-    </div> -->
-  </div>
-  <div class="analytics--block govuk-grid-column-one-half">
-    <!-- <h3 class="analytics--header govuk-heading-s">Total times viewed</h3> -->
-    <h3 class="govuk-heading-s">Total times viewed</h3>
-    <div class="analytics--summary">
-      <!-- <div class="analytics--numeric">12</div> -->
-      <p class="analytics--info">12</p>
-      <p class="analytics--info"><span class="govuk-!-font-weight-bold">+5</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
-    </div>
-  </div>
-  <div class="analytics--block govuk-grid-column-one-half">
-    <!-- <h3 class="analytics--header govuk-heading-s">Total applications started</h3> -->
-    <h3 class="govuk-heading-s">Total applications started</h3>
-    <div class="analytics--summary">
-      <!-- <div class="analytics--numeric">7</div> -->
-      <p class="analytics--info">7</p>
-      <p class="analytics--info"><span class="govuk-!-font-weight-bold">+1</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
-    </div>
-  </div>
-  <div class="analytics--block govuk-grid-column-one-half">
-    <!-- <h3 class="analytics--header govuk-heading-s">Total applications submitted</h3> -->
-    <h3 class="govuk-heading-s">Total applications submitted</h3>
-    <div class="analytics--summary">
-      <!-- <div class="analytics--numeric">1</div> -->
-      <p class="analytics--info">12</p>
-      <p class="analytics--info"><span class="govuk-!-font-weight-bold">No</span> increase</p>
-    </div>
-  </div>
-</div>
 </div>
 </div>
 
-<!-- ////END ANALYTICS//// -->
-<br>
-<br>
-<div class="govuk-grid-row">
-<div class="govuk-grid-column-full">
-<h2 class="govuk-heading-l">Manage applications</h2>
-<table class="govuk-table responsive-table">
-  <thead class="govuk-table__header">
-    <tr class="govuk-table__row" role="row">
-      <th class="govuk-table__cell" role="gridcell" class="bold">Name</th>
-      <th class="govuk-table__cell" role="gridcell" class="bold">Application ID</th>
-      <th class="govuk-table__cell" role="gridcell" class="bold">Status</th>
-      <th class="govuk-table__cell" role="gridcell" class="bold">Date applied</th>
-      <th class="govuk-table__cell" role="gridcell" class="bold">Disability</th>
+<!-- table START -->
+{%- from "govuk/components/tag/macro.njk" import govukTag -%}
 
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-succesful">Faizal Dawood</a></td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+{%
+  set appsTableData = [
+    {
+      name: "Keith Stewart",
+      id: "678CFR0",
+      status: "new",
+      link: "../account/application-new",
+      classes: "govuk-tag--blue",
+      date: "13 Jan 2023",
+      disability: "Prefer not to say"
+    },
+    {
+      name: "Ellen Collins",
+      id: "6H0IL55",
+      status: "new",
+      link: "../account/application-review-no",
+      classes: "govuk-tag--blue",
+      date: "13 Jan 2023",
+      disability: "No"
+    },
+    {
+      name: "Cynthia Perez",
+      id: "FL13JK0",
+      status: "new",
+      link: "",
+      classes: "govuk-tag--blue",
+      date: "15 Jan 2023",
+      disability: "No"
+    },
+    {
+      name: "Susie Noble",
+      id: "LL13J9H",
+      status: "New",
+      link: "",
+      classes: "govuk-tag--blue",
+      date: "15 Jan 2023",
+      disability: "No"
+    },
+    {
+      name: "Judy Ward",
+      id: "897DW5T",
+      status: "New",
+      link: "",
+      classes: "govuk-tag--blue",
+      date: "15 Jan 2023",
+      disability: "No"
+    },
+    {
+      name: "Charles Davis",
+      id: "B2LH789",
+      status: "New",
+      link: "",
+      classes: "govuk-tag--blue",
+      date: "15 Jan 2023",
+      disability: "Prefer not to say"
+    },
+    {
+      name: "Neena Patel",
+      id: "78BH067",
+      status: "New",
+      link: "",
+      classes: "govuk-tag--blue",
+      date: "15 Jan 2023",
+      disability: "No"
+    },
+    {
+      name: "Jose Robinson",
+      id: "LY6TY44",
+      status: "New",
+      link: "",
+      classes: "govuk-tag--blue",
+      date: "15 Jan 2023",
+      disability: "Prefer not to say"
+    },
+    {
+      name: "John Smith",
+      id: "39DBE1A",
+      status: "New",
+      link: "",
+      classes: "govuk-tag--blue",
+      date: "16 Jan 2023",
+      disability: "Yes"
+    },
+    {
+      name: "Danielle Price",
+      id: "HAK9F56",
+      status: "New",
+      link: "",
+      classes: "govuk-tag--blue",
+      date: "16 Jan 2023",
+      disability: "Yes"
+    }
+]
+%}
+    <table class="govuk-table responsive-table" data-module="das-table-sort">
+      <thead class="govuk-table__header">
+        <tr class="govuk-table__row" role="row">
 
-    </tr>
-    <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-failed">Bill Shoggins</a></td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+          <th scope="col" class="govuk-table__header" aria-sort="none">
+            <a href="#" class="govuk-link das-table__sort das-table__sort--asc" aria-sort="ascending">Name </a>
+          </th>
+          <th scope="col" class="govuk-table__header das-table--double-arrows" aria-sort="none">
+            <a href="#" class="govuk-link das-table__sort">Application ID</a>
+          </th>
+          <th scope="col" class="govuk-table__header das-table--double-arrows" aria-sort="none">
+            <a href="#" class="govuk-link das-table__sort">Status</a>
+          </th>
+          <th scope="col" class="govuk-table__header das-table--double-arrows" aria-sort="none">
+            <a href="#" class="govuk-link das-table__sort">Date applied</a>
+          </th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
+        {% for applicant in appsTableData %}
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell" role="gridcell" data-label="Name">
+            <a href="{{ applicant.link }}" class="govuk-link govuk-link--no-visited-state">{{ applicant.name }}</a>
+            <input type="hidden" name="{{ applicant.id }}-name" value="{{ applicant.name }}">
+          </td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">{{ applicant.id }}</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Status">
+            {{ govukTag({
+              text: applicant.status, 
+              classes: applicant.classes
+            }) }}
+          </td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">{{ applicant.date }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+<!-- table END -->
 
-    </tr>
-    <tr>
-      <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2018</td>
-      <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+{% endblock %}
 
-    </tr>
-  </tbody>
-</table>
-</div>
-</div>
+{% block scripts %}
+{{super()}}
+<script>
+  const selectAllCB = document.getElementById("select-all-applications");
+  const allApplicantsCB = document.getElementsByName('applications');
+
+  const tableSort = () => {
+    const getCellValue = (tr, idx) => {
+      return tr.children[idx].innerText || tr.children[idx].textContent
+    };
+
+    const comparer = (idx, asc) => (a, b) => ((v1, v2) =>
+                    v1 !== '' && v2 !== '' && !isNaN(v1) && !isNaN(v2) ? v1 - v2 : v1.toString().localeCompare(v2)
+    )(getCellValue(asc ? a : b, idx), getCellValue(asc ? b : a, idx));
+
+    const sortableTable = document.querySelector('[data-module="das-table-sort"]');
+    const allSortLinks = sortableTable.querySelectorAll('.govuk-table__header .govuk-link');
+
+    const handleClick = event => {
+      event.preventDefault();
+      const sortLink = event.target
+
+      allSortLinks.forEach(link => {
+        if (link === event.target) return false;
+        link.parentNode.classList.add("das-table--double-arrows")
+        link.classList.remove("das-table__sort--asc", "das-table__sort--desc")
+        link.setAttribute("aria-sort", "none")
+      });
+
+      if (sortLink.classList.contains("das-table__sort--asc")) {
+        sortLink.parentNode.classList.remove("das-table--double-arrows")
+        sortLink.classList.replace("das-table__sort--asc", "das-table__sort--desc")
+        sortLink.setAttribute("aria-sort", "descending")
+      } else if (sortLink.classList.contains("das-table__sort--desc")) {
+        sortLink.parentNode.classList.remove("das-table--double-arrows")
+        sortLink.classList.replace("das-table__sort--desc", "das-table__sort--asc")
+        sortLink.setAttribute("aria-sort", "ascending")
+      } else {
+        sortLink.parentNode.classList.remove("das-table--double-arrows")
+        sortLink.classList.add("das-table__sort--desc")
+        sortLink.setAttribute("aria-sort", "descending")
+      }
+
+      Array.from(sortableTable.querySelectorAll('.govuk-table__body .govuk-table__row'))
+              .sort(comparer(Array.from(sortLink.parentNode.parentNode.children)
+                      .indexOf(sortLink.parentNode), this.asc = !this.asc))
+              .forEach(tr => sortableTable.querySelector(".govuk-table__body").appendChild(tr));
+    }
+
+    allSortLinks.forEach(link => {
+      link.addEventListener('click', handleClick)
+    });
+  }
+
+  if (document.querySelector('[data-module="das-table-sort"]')) {
+    tableSort();
+  }
+</script>
+
 
 {% endblock %}
