--- a/app/views/v14/provider/view/5b-manage-vacancy.html
+++ b/app/views/v14/provider/view/5b-manage-vacancy.html
@@ -136,7 +136,7 @@ Manage vacancy
 
 <!-- START disability confident -->
 <div class="govuk-inset-text">
-  Gloucestershire Health and Care NHS Foundation Trust is a disability confident employer.
+  Gloucestershire Health and Care NHS Foundation Trust is signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" class="govuk-link" rel="noreferrer noopener" target="_blank">Disability Confident scheme (opens in new tab)</a>.
 </div>
 <!-- END disability confident -->
 
