employer sharing apps anonymised v1

--- a/app/views/v14/employer/account/application-shared-v1.html
+++ b/app/views/v14/employer/account/application-shared-v1.html
@@ -164,6 +164,9 @@ Manage apprentices
                 <label class="govuk-label govuk-radios__label" for="contact">
                   Yes, I would like to interview this applicant
                 </label>
+                <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                  This will show the applicant's name and contact information.
+                </div>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
                 <div class="govuk-form-group">
@@ -183,7 +186,7 @@ Manage apprentices
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden govuk-character-count" id="conditional-contact-3" data-module="govuk-character-count" data-maxwords="200">
                 <div class="govuk-form-group">
                   <div id="with-hint-hint" class="govuk-hint">
-                    Explain why you don't want to interview this applicant. Your comments will be sent to the training provider so they can give feedback to the applicant.
+                    Explain why you don't want to interview this applicant. Your comments will be sent to the training provider, who will then give feedback to the applicant.
                   </div>
                   <textarea class="govuk-textarea govuk-js-character-count" id="with-hint" name="respond-no" rows="6" aria-describedby="with-hint-info with-hint-hint"></textarea>
               
@@ -202,10 +205,10 @@ Manage apprentices
 
 <div class="govuk-button-group">
   <button class="govuk-button" data-module="govuk-button">
-    Send response
+    Confirm
   </button>
 
-  <a class="govuk-link" href="manage-vacancy">Cancel</a>
+  <a class="govuk-link" href="../view/6b-shared-applications-v1">Cancel</a>
 </div>
 
     </section>
