--- a/app/views/v14/employer/view/6b-shared-applications-v2.html
+++ b/app/views/v14/employer/view/6b-shared-applications-v2.html
@@ -18,7 +18,7 @@ Manage vacancy
     <h1 class="govuk-heading-l">Shared applications</h1>
 
     <p>
-      You are being shown anonymised versions of these applications.
+      Each application is anonymised. If you decide to interview the applicant, you will then be able to see their name and contact information.
     </p>
 
 <!-- table START -->
@@ -117,7 +117,7 @@ Manage vacancy
         <tr class="govuk-table__row" role="row">
 
           <th scope="col" class="govuk-table__header das-table--double-arrows" aria-sort="none">
-            <a href="#" class="govuk-link das-table__sort">Application ID</a>
+            <a href="#" class="govuk-link das-table__sort">Applicant</a>
           </th>
           <th scope="col" class="govuk-table__header das-table--double-arrows" aria-sort="none">
             <a href="#" class="govuk-link das-table__sort">Reviewed</a>
