--- a/app/views/v14/employer/account/application-shared-saved-v1.html
+++ b/app/views/v14/employer/account/application-shared-saved-v1.html
@@ -7,7 +7,7 @@ Manage apprentices
 {% block beforeContent %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+    <a href="../view/6b-shared-applications-yes-v1" class="govuk-back-link">Back</a>
   </div>
 </div>
 {% endblock %}
@@ -15,6 +15,20 @@ Manage apprentices
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+
+    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Done
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <h3 class="govuk-notification-banner__heading">
+          Response sent to training provider: Yes, I would like to interview this applicant.
+        </h3>
+        <p class="govuk-body">You can now see this applicant's name and contact details.</p>
+      </div>
+    </div>
 
     <section>
       <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
@@ -34,6 +48,7 @@ Manage apprentices
         </p>
       </div>
     </section>
+  
 
 <!-- ABOUT YOU -->
     <section>
@@ -146,14 +161,16 @@ Manage apprentices
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
+
 <!-- RESPOND -->
-    <section>
-      <h2 class="govuk-heading-l">
-        Your response to the training provider
-      </h2>
-      <p>
-        Yes, I want to interview this applicant.
-      </p>
+<section>
+  <h2 class="govuk-heading-l">
+    Your response to the training provider
+  </h2>
+  <p>
+    Yes, I want to interview this applicant.
+  </p>
+
 
   </div>
 </div>
