--- a/app/views/v14/employer/view/6-shared-new.html
+++ b/app/views/v14/employer/view/6-shared-new.html
@@ -197,10 +197,10 @@ Adverts
           <tr class="govuk-table__row govuk-body-s">
             <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
               <td class="govuk-table__cell">VAC10000039295</td>
-              <td class="govuk-table__cell"> 12 shared <b>(10 new)</b> </td>
+              <td class="govuk-table__cell"> 7 shared <b>(7 new)</b> </td>
               <td class="govuk-table__cell">21 Nov 2022</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
-              <td class="govuk-table__cell"><a href="6b-shared-applications" class="govuk-link">Review</a></td>   
+              <td class="govuk-table__cell"><a href="6b-shared-applications-v1" class="govuk-link">Review</a></td>   
           </tr>
 
           <tr class="govuk-table__row govuk-body-s">
@@ -209,7 +209,7 @@ Adverts
               <td class="govuk-table__cell"> 5 shared <b>(1 new)</b></td>
               <td class="govuk-table__cell">31 Nov 2022</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
-              <td class="govuk-table__cell"><a href="#" class="govuk-link">Review</a></td>   
+              <td class="govuk-table__cell"><a href="6b-shared-applications-v2" class="govuk-link">Review</a></td>   
           </tr>
   </tbody>
 </table>
