--- a/app/views/v14/employer/view/6b-shared-applications-v1.html
+++ b/app/views/v14/employer/view/6b-shared-applications-v1.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Adverts
+Manage vacancy
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,20 +13,6 @@ Adverts
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
-      <div class="govuk-notification-banner__header">
-        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Done
-        </h2>
-      </div>
-      <div class="govuk-notification-banner__content">
-        <h3 class="govuk-notification-banner__heading">
-          Response for C5686EA sent: No, I don't want to interview this applicant
-        </h3>
-        <p class="govuk-body">The training provider has been notified.</p>
-      </div>
-    </div>
 
     <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
     <h1 class="govuk-heading-l">Shared applications</h1>
@@ -40,7 +26,13 @@ Adverts
 
 {%
   set appsTableData = [
-
+    {
+      id: "C5662EA",
+      status: "RESPONSE NEEDED",
+      link: "../account/application-shared-v1",
+      classes: "govuk-tag--blue",
+      date: "Not reviewed"
+    },
     {
       id: "LP07688",
       status: "RESPONSE NEEDED",
@@ -82,13 +74,6 @@ Adverts
       link: "../account/application-shared-v1",
       classes: "govuk-tag--blue",
       date: "Not reviewed"
-    },
-    {
-      id: "C5662EA",
-      status: "UNSUCCESSFUL",
-      link: "../account/application-shared-no",
-      classes: "govuk-tag--red",
-      date: "today"
     }
 ]
 %}
@@ -112,13 +97,7 @@ Adverts
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">
             <a href="{{ applicant.link }}" class="govuk-link govuk-link--no-visited-state">{{ applicant.id }}</a></td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">
-            {% if applicant.date == "today" %}
-              <span class="todays-date"></span>
-            {% else %}
-              {{ applicant.date }}
-            {% endif %}
-          </td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">{{ applicant.date }} </td>
           <td class="govuk-table__cell" role="gridcell" data-label="Status">
             {{ govukTag({
               text: applicant.status, 
@@ -142,16 +121,12 @@ Adverts
 <!-- Today's date -->
 <script>
   var months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
-  var n = new Date();
-  var y = n.getFullYear();
-  var m = n.getMonth();
-  var d = n.getDate();
-  var todaysDate = d + " " + months[m] + " " + y;
-  var td = document.getElementsByClassName("todays-date");
-  for (let i = 0; i < td.length; i++) {
-    td[i].textContent = todaysDate
-  }
-  </script>
+ var n = new Date();
+ var y = n.getFullYear();
+ var m = n.getMonth();
+ var d = n.getDate();
+ document.getElementById("date").innerHTML = d + " " + months[m] + " " + y;
+   </script>
 
 <!-- Table sorts -->
 <script>
